--- a/src/index.css
+++ b/src/index.css
@@ -43,6 +43,8 @@ body {
   display: flex;
   justify-content: space-evenly;
   gap: 1.5rem;
+  margin-bottom: 2rem;
+  margin-top: 1rem;
 }
 
 #user-input label {
